Fixes treetable header background color and treetable row selection alignment.

--- a/src/clr-addons/treetable/treetable.scss
+++ b/src/clr-addons/treetable/treetable.scss
@@ -90,6 +90,11 @@ $indentation-increment: 1rem;
       border-top-color: var(--clr-table-border-color);
     }
 
+    #{$thead} {
+      color: var(--clr-thead-color);
+      background-color: var(--clr-thead-bgcolor);
+    }
+
     // Rounded corners on tables are a pain...
     #{$thead} #{$th} {
       &:first-child {
@@ -246,6 +251,7 @@ $indentation-increment: 1rem;
         position: relative;
         display: flex;
         padding: var(--cds-global-space-3) var(--cds-global-space-6);
+        align-items: center;
 
         &:after {
           content: '';
@@ -255,6 +261,39 @@ $indentation-increment: 1rem;
           right: 0;
           top: 0.25rem;
           background-color: var(--clr-table-border-color, #ccc);
+        }
+
+        input {
+          width: var(--clr-base-icon-size-s);
+          height: var(--clr-base-icon-size-s);
+          min-width: var(--clr-base-icon-size-s);
+          min-height: var(--clr-base-icon-size-s);
+          padding: 0;
+        }
+
+        .clr-checkbox-wrapper {
+          width: var(--clr-base-icon-size-s);
+          height: var(--clr-base-icon-size-s);
+          min-width: var(--clr-base-icon-size-s);
+          min-height: var(--clr-base-icon-size-s);
+
+          .clr-control-label:has(.clr-sr-only) {
+            padding: 0;
+            min-height: var(--cds-global-space-1);
+            min-width: var(--cds-global-space-1);
+          }
+        }
+
+        &,
+        input {
+          cursor: pointer;
+        }
+
+        &.clr-form-control-disabled {
+          &,
+          input {
+            cursor: not-allowed;
+          }
         }
       }
 
@@ -284,8 +323,8 @@ $indentation-increment: 1rem;
         position: relative;
 
         :first-child {
-          /* Add padding of 1.5 rem to account for the expendable icon in the rows below*/
-          padding-left: 1.5rem;
+          /* Add padding of base-cell-indentation to account for the expendable icon in the rows below*/
+          padding-left: $base-cell-indentation;
         }
 
         .treetable-column {
